# pyscripts

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: processing_data.json
pyscripts/: clip_mp4.py  copy_drive_folder.py  estimator.py  extract_audio.py  mkv_to_mp4.py  reduce_mp4.py
