[project]
name = "pyscripts"
version = "0.1.0"
description = ""
authors = [
    {name = "Vincent Ramdhanie", email = "vramdhanie@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "moviepy==1.0.3",
]

[tool.poetry]
name = "pyscripts"
version = "0.1.0"
description = ""
authors = ["Vincent Ramdhanie <vramdhanie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
moviepy = "1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
